# FARM-Stack

./: README.md  pyproject.toml
backend/: Dockerfile  database.py  main.py  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  Todo.js  TodoListView.js
