[tool.poetry]
name = "farm"
version = "0.1.0"
description = ""
authors = ["wayner_kao <wayner.kao@mile.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
motor = "^3.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
